Added a working person api with inmemory database and swagger docs.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=codingtest
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:personDB
+spring.datasource.username=testDBUsername
+spring.datasource.password=testDBPassword
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
